Code cleaning + report

--- a/HPDGA.ipynb
+++ b/HPDGA.ipynb
@@ -35,7 +35,7 @@
       },
       "outputs": [],
       "source": [
-        "%cd HPDGA\n",
+        "%cd knn_cuda/code\n",
         "\n",
         "!ls -la\n",
         "\n",
